{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "6105db33-a49b-a1b2-dcb9-c1b3d593dc21",
  "resources": [
    {
      "module": "module.aws_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dos_15_mikhalenka_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d887a308369b6881",
            "arn": "arn:aws:ec2:us-east-1:************:instance/i-09ad191762e3fe5d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ad191762e3fe5d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05230a51724413070",
            "private_dns": "ip-10-0-0-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.183",
            "public_ip": "**.***.**.**",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d50841ae567e5ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009ed77b62c823328",
            "tags": {
              "Name": "dos_15_mikhalenka_ec2"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0689fe6c030336435"
            ]
          },
          "dependencies": [
            "module.aws_ec2_instance.aws_security_group.dos_15_mikhalenka_sg",
            "module.aws_ec2_instance.data.aws_ami.amazon_linux",
            "module.aws_ec2_vpc.aws_subnet.dos_15_mikhalenka_subnet",
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dos_15_mikhalenka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:************:security-group/sg-0689fe6c030336435",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0689fe6c030336435",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 39853
              }
            ],
            "name": "dos_15_mikhalenka_sg",
            "name_prefix": "",
            "owner_id": "************",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dos_15_mikhalenka_sg"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-013bcd1b08b88f2c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dos_15_mikhalenka_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:************:internet-gateway/igw-0b4dd66a734cb6a98",
            "id": "igw-0b4dd66a734cb6a98",
            "owner_id": "************",
            "tags": {
              "Name": "dos_15_mikhalenka_ig"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_ig"
            },
            "vpc_id": "vpc-013bcd1b08b88f2c8"
          },
          "dependencies": [
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dos_15_mikhalenka_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:************:route-table/rtb-0d1a62a95f4f539b2",
            "id": "rtb-0d1a62a95f4f539b2",
            "owner_id": "************",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4dd66a734cb6a98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dos_15_mikhalenka_rt"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013bcd1b08b88f2c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_ec2_vpc.aws_internet_gateway.dos_15_mikhalenka_ig",
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dos_15_mikhalenka_rt_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb7045f7a81cc847",
            "route_table_id": "rtb-0d1a62a95f4f539b2",
            "subnet_id": "subnet-009ed77b62c823328"
          },
          "dependencies": [
            "module.aws_ec2_vpc.aws_internet_gateway.dos_15_mikhalenka_ig",
            "module.aws_ec2_vpc.aws_route_table.dos_15_mikhalenka_rt",
            "module.aws_ec2_vpc.aws_subnet.dos_15_mikhalenka_subnet",
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dos_15_mikhalenka_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:************:subnet/subnet-009ed77b62c823328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ed77b62c823328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "************",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dos_15_mikhalenka_subnet"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_subnet"
            },
            "vpc_id": "vpc-013bcd1b08b88f2c8"
          },
          "dependencies": [
            "module.aws_ec2_vpc.aws_vpc.dos_15_mikhalenka_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dos_15_mikhalenka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:************:vpc/vpc-013bcd1b08b88f2c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02200f14b99c60446",
            "default_route_table_id": "rtb-051d6d2f9e5c11591",
            "default_security_group_id": "sg-0bca542d93ba1e0f5",
            "dhcp_options_id": "dopt-0d4f27337074e6c30",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013bcd1b08b88f2c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051d6d2f9e5c11591",
            "owner_id": "************",
            "tags": {
              "Name": "dos_15_mikhalenka_vpc"
            },
            "tags_all": {
              "Name": "dos_15_mikhalenka_vpc"
            }
          }
        }
      ]
    }
  ]
}